@@ -1,0 +1,2 @@
+>genome
+AGCTTATAGGAGCGATCGTGCATGTATGAGCGGCCCGCGAGAGATTCGAGTAGAGAGCGCGCATGCTCGAGAGCGTNNNNNNNNNNNNNNNNNNNNNNNN
