@@ -1,0 +1,4 @@
+@HD     VN:1.0  SO:unsorted
+@SQ     SN:11   LN:249250621
+@PG     ID:Goby VN:UNKNOWN
+SRR079486.623874	163	11	293002	70	1I54M13S	=	293134	197	GGGCCATGGTGGGGAGGGGCTCGGGGAGGAAGGGTGGATGCTCCCAGACTCAGCAGATGATTTTCAGA	:EDCEA?HH?IHII;IIGIHFH?GJE.H?19=;>%37,,:'?5:10C;>:C@A@##############	OQ:Z:HHHHGGGGFGEGFGGGGGGGGHHHDHHHHHHHGHHHHHHHFFGEGEFFG<?:?0B=ABA,>.==;E	MD:Z:54
