@@ -1,3 +1,5 @@
+ - compact-to-sam mode: fix bug where bam tags containing a colon character (:) would be truncated after the first
+   colon. Thanks to Vadim Zalunin for reporting this problem.
 2.0.1
  - Release Goby C/C++ APIs under the LGPL license version 3 to make it possible for companies to incorporate support
    for Goby formats in their tools. Thanks to Collin Hercus for the suggestion. Please note that part of the Goby
